crates/aion-awl/tests/fixtures/rev2/step-bodies/invalid/any_non_list.awl
//! Reject collection predicates over non-list values.
workflow any_non_list
  input value: String
  outcome done: type Result, route success

type Result { ok: Bool }

step decide
  outcome bad: when value |> any(true), route done(ok: false)
  outcome fallback: otherwise, route done(ok: true)
